# geoprocess

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-build.sh  docker-entrypoint.sh  pyproject.toml
.github/workflows/: dockerimage.yml
data/2016ABS/Authority Code/: Authority_Code_MB_CATEGORY_CLASS_AUT_shp.dbf
data/2016ABS/Standard/: ACT_SA3_2016_POLYGON_shp.dbf  ACT_SA3_2016_POLYGON_shp.shp  ACT_SA3_2016_POLYGON_shp.shx  ACT_SA3_2016_shp.dbf  ACT_SA4_2016_POLYGON_shp.dbf  ACT_SA4_2016_POLYGON_shp.shp  ACT_SA4_2016_POLYGON_shp.shx  ACT_SA4_2016_shp.dbf  NSW_SA3_2016_POLYGON_shp.dbf  NSW_SA3_2016_POLYGON_shp.shp  NSW_SA3_2016_POLYGON_shp.shx  NSW_SA3_2016_shp.dbf  NSW_SA4_2016_POLYGON_shp.dbf  NSW_SA4_2016_POLYGON_shp.shp  NSW_SA4_2016_POLYGON_shp.shx  NSW_SA4_2016_shp.dbf  NT_SA3_2016_POLYGON_shp.dbf  NT_SA3_2016_POLYGON_shp.shp  NT_SA3_2016_POLYGON_shp.shx  NT_SA3_2016_shp.dbf  NT_SA4_2016_POLYGON_shp.dbf  NT_SA4_2016_POLYGON_shp.shp  NT_SA4_2016_POLYGON_shp.shx  NT_SA4_2016_shp.dbf  OT_SA3_2016_POLYGON_shp.dbf  OT_SA3_2016_POLYGON_shp.shp  OT_SA3_2016_POLYGON_shp.shx  OT_SA3_2016_shp.dbf  OT_SA4_2016_POLYGON_shp.dbf  OT_SA4_2016_POLYGON_shp.prj  OT_SA4_2016_POLYGON_shp.shp  OT_SA4_2016_POLYGON_shp.shx  OT_SA4_2016_shp.dbf  QLD_SA3_2016_POLYGON_shp.dbf  QLD_SA3_2016_POLYGON_shp.shp  QLD_SA3_2016_POLYGON_shp.shx  QLD_SA3_2016_shp.dbf  QLD_SA4_2016_POLYGON_shp.dbf  QLD_SA4_2016_POLYGON_shp.shp  QLD_SA4_2016_POLYGON_shp.shx  (+33 more)
geoprocess/: __init__.py  cli.py  controllers.py  find_psma.py  google_geo.py  logging.py  scheduler.py  settings.py
(+41 files in other folders)
